@@ -68,6 +68,7 @@ end;
 procedure TWIASelectForm.FillList;
 var
    i,
+   txtW,
    numDevices,
    selectedIndex: Integer;
    curItem: TListItem;
@@ -84,9 +85,21 @@ begin
          begin
            curDevice :=WIAManager.Devices[i];
            curItem :=lvSources.Items.Add;
+
+           //Add Name Colums and increase width if necessary (since MinWidth/AutoSize don't work as expected)
            curItem.Caption:=curDevice.Name;
-           //curItem.SubItems.Add(curDevice.Type_);
+           txtW:= lvSources.Canvas.TextWidth(curDevice.Name)+16;
+           if (lvSources.Columns[0].Width < txtW) then lvSources.Columns[0].Width:= txtW;
+
+           //Add Manufacturer
            curItem.SubItems.Add(curDevice.Manufacturer);
+           txtW:= lvSources.Canvas.TextWidth(curDevice.Manufacturer)+16;
+           if (lvSources.Columns[1].Width < txtW) then lvSources.Columns[1].Width:= txtW;
+
+           //Add Type
+           curItem.SubItems.Add(WIADeviceTypeDescr[curDevice.Type_]);
+           txtW:= lvSources.Canvas.TextWidth(WIADeviceTypeDescr[curDevice.Type_])+16;
+           if (lvSources.Columns[2].Width < txtW) then lvSources.Columns[2].Width:= txtW;
 
            //if is Current Selected Scanner set selectedIndex
            if (WIAManager.SelectedDevice <> nil) and (WIAManager.SelectedDevice.ID = curDevice.ID)
