@@ -2,6 +2,7 @@ WIAPASCAL CHANGE LOG
 ======================
 
 2024/10/
+        31 Columns width adjustments in SelectForm
         30 Delphi Compatibility
         29 TWIADevice.GetProperty Process only WIA Types, added all Arrays/Ranges;
 	   Changed names from PaperSize to PaperType;
